# orchestrateur_llm_rust

./: .env.example  .gitignore  Cargo.toml  README.md  install.sh
config/: default.toml  routing_rules.toml
crates/agents/: Cargo.toml
crates/agents/src/: build_agent.rs  builder_agent.rs  context_builder.rs  doc_agent.rs  frontend_agent.rs  gpt_agent.rs  grok_agent.rs  lib.rs  local_agent.rs  rust_agent.rs  shell_tool.rs  verify_agent.rs
crates/context_store/: Cargo.toml
crates/context_store/src/: lib.rs  store.rs
crates/core/: Cargo.toml
crates/core/src/: context.rs  dispatcher.rs  lib.rs  llm_arch_config.rs  orchestrator.rs  task.rs
crates/file_analyzer/: Cargo.toml
crates/file_analyzer/src/: chunker.rs  classifier.rs  git_context.rs  imports.rs  lib.rs  scanner.rs
crates/llm_clients/: Cargo.toml
crates/llm_clients/src/: anthropic.rs  gemini.rs  gpt.rs  grok.rs  lib.rs
crates/local_llm/: Cargo.toml
crates/local_llm/src/: config.rs  lib.rs
crates/local_llm/src/hardware/: hardware_profile.rs  mod.rs
crates/local_llm/src/interface_llm/: config_llm.rs  llama_cpp_4.rs  mod.rs  rag.rs
crates/local_llm/src/models_download/: mod.rs  models_download.rs
crates/tui/: Cargo.toml
crates/tui/src/: app.rs  main.rs  ui.rs
crates/tui/src/components/: agent_list.rs  diff_panel.rs  log_panel.rs  mod.rs  model_status.rs  status_panel.rs  stream_panel.rs  token_counter.rs
