[package]
name = "file_analyzer"
version = "0.1.0"
edition = "2021"

[dependencies]
walkdir.workspace = true
ignore.workspace = true
anyhow.workspace = true
thiserror.workspace = true
tracing.workspace = true
serde.workspace = true
serde_json.workspace = true
regex.workspace = true
chrono.workspace = true
