[package]
name = "llm_clients"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
thiserror.workspace = true
tracing.workspace = true
async-trait.workspace = true
sha2.workspace = true
hex.workspace = true
chrono.workspace = true
