[package]
name = "local_llm"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1"
tracing = "0.1"
tokio = { version = "1", features = ["full"] }
hf-hub = "0.5"
dirs = "5"

[target.'cfg(target_os = "macos")'.dependencies]
llama-cpp-4 = { version = "0.2", features = ["metal"] }
llama-cpp-sys-4 = { version = "0.2", features = ["metal"] }

[target.'cfg(target_os = "linux")'.dependencies]
llama-cpp-4 = { version = "0.2", default-features = false }
llama-cpp-sys-4 = { version = "0.2", default-features = false }

[target.'cfg(target_os = "windows")'.dependencies]
llama-cpp-4 = { version = "0.2", default-features = false }
llama-cpp-sys-4 = { version = "0.2", default-features = false }
