[package]
name = "tui"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "orchestrateur-llm"
path = "src/main.rs"

[dependencies]
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
thiserror.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
tracing-appender.workspace = true
dirs.workspace = true
sysinfo.workspace = true
uuid.workspace = true
chrono.workspace = true
ratatui.workspace = true
crossterm.workspace = true
futures.workspace = true
tokenmind-core = { path = "../core" }
agents = { path = "../agents" }
llm_clients = { path = "../llm_clients" }
local_llm = { path = "../local_llm" }
context_store = { path = "../context_store" }
